# docker-ops

./: Dockerfile  README.md  pyproject.toml
src/example/: config.py  main.py
src/tests/: test_main.py
