[tool.poetry]
name = "docker-ops"
version = "0.1.0"
description = ""
authors = ["Ruben Verweij <ruben.verweij@datapreds.com>"]
readme = "README.md"
packages = [{include = "docker_ops"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
pylint = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
